--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 application: ccxlv
-version: 1
+version: 4
 runtime: python
 api_version: 1
 
@@ -34,6 +34,19 @@ handlers:
 
 - url: /index3.html
   script: zuidvast3.py
+
+  # bijna2009
+- url: /2009/css/
+  static_dir: bijna2009/css/
+
+- url: /2009/img/
+  static_dir: bijna2009/img/
+  
+- url: /2009/js/
+  static_dir: bijna2009/js/  
+  
+- url: /index.html
+  script: bijna2009.py
 
   # ccxlv
 - url: /ccxlv/css/
