--- a/index.yaml
+++ b/index.yaml
@@ -10,8 +10,14 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
-# Used once in query history.
+# Used 84 times in query history.
 - kind: Greeting
+  properties:
+  - name: date
+    direction: desc
+
+# Used once in query history.
+- kind: Invites
   properties:
   - name: date
     direction: desc
